--- a/RemoteConfiguration.json
+++ b/RemoteConfiguration.json
@@ -5,15 +5,15 @@
         {
             "ID": "Augusto",
             "position": {
-                "x": 5.0,
-                "y": 5.170000076293945,
+                "x": 0.0,
+                "y": 0.0,
                 "z": 0.0
             },
             "Rotation": {
                 "x": 0.0,
-                "y": 1.0,
+                "y": 0.0,
                 "z": 0.0,
-                "w": 0.0
+                "w": 1.0
             },
             "Scale": {
                 "x": 1.0,
@@ -36,6 +36,25 @@
             },
             "Scale": {
                 "x": 2.0,
+                "y": 1.0,
+                "z": 1.0
+            }
+        },
+        {
+            "ID": "Augusto",
+            "position": {
+                "x": 5.0,
+                "y": 5.170000076293945,
+                "z": 0.0
+            },
+            "Rotation": {
+                "x": 0.0,
+                "y": 1.0,
+                "z": 0.0,
+                "w": 0.0
+            },
+            "Scale": {
+                "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             }
