--- a/RemoteConfiguration.json
+++ b/RemoteConfiguration.json
@@ -24,6 +24,25 @@
         {
             "ID": "Cube",
             "position": {
+                "x": -8.340879440307618,
+                "y": 5.544652462005615,
+                "z": -22.187057495117189
+            },
+            "Rotation": {
+                "x": 0.0,
+                "y": 0.0,
+                "z": 0.0,
+                "w": 1.0
+            },
+            "Scale": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            }
+        },
+        {
+            "ID": "Cube",
+            "position": {
                 "x": -5.0,
                 "y": 2.7899999618530275,
                 "z": 0.0
@@ -52,6 +71,25 @@
                 "y": 1.0,
                 "z": 0.0,
                 "w": 0.0
+            },
+            "Scale": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            }
+        },
+        {
+            "ID": "Augusto",
+            "position": {
+                "x": 0.0,
+                "y": 0.0,
+                "z": 0.0
+            },
+            "Rotation": {
+                "x": 0.0,
+                "y": 0.0,
+                "z": 0.0,
+                "w": 1.0
             },
             "Scale": {
                 "x": 1.0,
