--- a/RemoteConfiguration.json
+++ b/RemoteConfiguration.json
@@ -5,9 +5,28 @@
         {
             "ID": "Cube",
             "position": {
-                "x": 4.46999979019165,
-                "y": -0.47999998927116396,
-                "z": -2.0
+                "x": -4.389999866485596,
+                "y": 0.0,
+                "z": 0.0
+            },
+            "Rotation": {
+                "x": 0.0,
+                "y": 0.0,
+                "z": 0.0,
+                "w": 1.0
+            },
+            "Scale": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            }
+        },
+        {
+            "ID": "Augusto",
+            "position": {
+                "x": 0.0,
+                "y": -1.7999998331069947,
+                "z": 0.0
             },
             "Rotation": {
                 "x": 0.0,
@@ -41,11 +60,11 @@
             }
         },
         {
-            "ID": "Augusto",
+            "ID": "Cube",
             "position": {
-                "x": 0.0,
-                "y": -1.7999998331069947,
-                "z": 0.0
+                "x": 4.46999979019165,
+                "y": -0.47999998927116396,
+                "z": -2.0
             },
             "Rotation": {
                 "x": 0.0,
