--- a/RemoteConfiguration.json
+++ b/RemoteConfiguration.json
@@ -5,8 +5,46 @@
         {
             "ID": "Cube",
             "position": {
-                "x": -4.389999866485596,
-                "y": 5.20999813079834,
+                "x": 0.0,
+                "y": -0.009999999776482582,
+                "z": -5.0
+            },
+            "Rotation": {
+                "x": 0.0,
+                "y": 0.0,
+                "z": 0.0,
+                "w": 1.0
+            },
+            "Scale": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            }
+        },
+        {
+            "ID": "Augusto",
+            "position": {
+                "x": 5.0,
+                "y": 5.570000171661377,
+                "z": 0.0
+            },
+            "Rotation": {
+                "x": 0.0,
+                "y": 1.0,
+                "z": 0.0,
+                "w": 0.0
+            },
+            "Scale": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            }
+        },
+        {
+            "ID": "Augusto",
+            "position": {
+                "x": 0.0,
+                "y": 0.4000004231929779,
                 "z": 0.0
             },
             "Rotation": {
@@ -41,10 +79,10 @@
             }
         },
         {
-            "ID": "Augusto",
+            "ID": "Cube",
             "position": {
-                "x": 0.0,
-                "y": 0.4000004231929779,
+                "x": -4.389999866485596,
+                "y": 5.20999813079834,
                 "z": 0.0
             },
             "Rotation": {
@@ -52,25 +90,6 @@
                 "y": 0.0,
                 "z": 0.0,
                 "w": 1.0
-            },
-            "Scale": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            }
-        },
-        {
-            "ID": "Augusto",
-            "position": {
-                "x": 5.0,
-                "y": 5.570000171661377,
-                "z": 0.0
-            },
-            "Rotation": {
-                "x": 0.0,
-                "y": 1.0,
-                "z": 0.0,
-                "w": 0.0
             },
             "Scale": {
                 "x": 1.0,
